--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: hyperpay_plugin
 description: The HyperPay platform offers a complete, easy-to-use guide to enable seamless integration of our end-to-end payment gateway for mobile.
 version: 2.0.8
-repository: https://github.com/ahmedelkhyary/hyperpay
+repository: https://github.com/Kaakati/hyperpay.git
 
 
 environment:
